# kni

./: .gitignore  LICENSE  ReadMe.md  build.xml  knirator.sh  update_dependencies.xml
indexer/: NativeIndex.proto
indexer/native/: AutoCXString.h  CMakeLists.txt  Indexer.cc  Indexer.h  Indexer.hh  Makefile  NativeIndex.pb.cc  NativeIndex.pb.h  OutputCollector.cc  OutputCollector.h  asserts.h  kniidx.cc
indexer/native/boostTests/: basicTests.cc
indexer/native/proto/: Makefile  NativeIndex.proto
indexer/native/testData/: AppKit.out  Index.out  c.h  c.out  cpp.hh  cpp.out  objc.out  rnd01.hh  rnd01.out  simpleClass.out  windows.out
indexer/native/tests/: test.cc
indexer/src/org/jetbrains/kni/indexer/: Indexer.kt  IndexerNative.java  NativeIndex.java
kni-jnrator/src/: main.kt
knirator/src/: main.kt
lib-stubs/cocoa-single/src/: appkit.kt
lib-stubs/cocoa/src/: AppKit.kt  CALayer.kt  CAMediaTiming.kt  CAOpenGLLayer.kt  CATransform3D.kt  CIColor.kt  CIImage.kt  CIVector.kt  NSATSTypesetter.kt  NSAccessibility.kt  NSAccessibilityElement.kt  NSAccessibilityProtocols.kt  NSActionCell.kt  NSAffineTransform.kt  NSAlert.kt  NSAnimation.kt  NSAnimationContext.kt  NSAppearance.kt  NSAppleEventDescriptor.kt  NSAppleEventManager.kt  NSAppleScript.kt  NSAppleScriptExtensions.kt  NSApplication.kt  NSApplicationScripting.kt  NSArchiver.kt  NSArray.kt  NSArrayController.kt  NSAttributeDescription.kt  NSAttributedString.kt  NSAutoreleasePool.kt  NSBackgroundActivityScheduler.kt  NSBezierPath.kt  NSBitmapImageRep.kt  NSBox.kt  NSBrowser.kt  NSBrowserCell.kt  NSBundle.kt  NSButton.kt  NSButtonCell.kt  NSByteCountFormatter.kt  (+322 more)
quickcheck/src/: CSampleGen.kt  kniTestUtils.kt  simpleParserChecks.kt
runtime-objc/native/: ffi_make  kniobjc.cc  kniobjc.h  make_native
runtime-objc/src/kni/objc/: Native.java  Nil.kt  ObJCClass.kt  ObjCObject.kt  ObjCSelector.kt  Pointer.kt  loadLibrary.kt
test-apps/swingHelloCocoa/src/: main.kt
tests/src/: AbstractIntegrationTest.kt  CFlavorsTests.kt  CSampleGen.kt  GenerateTests.kt  IndexerTest.kt  IntegrationTest.kt  cocoaDirect.kt  jnrateLibCLang.kt  jnrateWinAPI.kt  kniTestUtils.kt  simpleParserChecks.kt
tests/testData/cocoaDirect/: cocoaDirectTest.kt
tests/testData/integration/: nil.kt  simpleClass.kt  simpleClass.m
tests/testData/integration/arguments/: char.kt  float.kt  long.h  long.kt  long.m  manyPrimitives.kt
tests/testData/integration/callbacks/arguments/: bool.kt  char.kt  float.kt  objcObject.kt  objcSelector.kt  pointer.kt
tests/testData/integration/callbacks/returnType/: float.kt
tests/testData/integration/foundation/: nsstringAsString.kt
tests/testData/integration/pointers/: argNSString.kt  argString.kt  pointerToChar.kt
tests/testData/integration/returnType/: float.kt  long.h  long.kt  long.m  objcObject.kt
tests/testData/integration_cpp/arguments/: PODs.cpp  PODs.h  PODs.hpp  PODs.kt  callbacks.cpp  callbacks.hpp  callbacks.kt  struct1.cpp  struct1.h  struct1.hpp  struct1.kt
tests/testData/libCLang/: libCLangTest.kt
tests/testData/winapi/: winapiTest.kt
